[tool.poetry]
name = "vhssstemp-2"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
utilitybelt = "^0.2.6"
sage = "^0.0.0"
sympy = "^1.6.1"
pfp = "^0.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
